--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
               </div>
               <div class="contact">
                 <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+                  <a href="http://github.com/techieshark/">github.com/techieshark</a><br />
+                  <a href="http://twitter.com/techieshark/">twitter.com/techieshark</a><br />
                 </p>
               </div>
             </div>
