attempt to make site work locally and remotely; use --baseurl= on local dev environment

--- a/_includes/features.html
+++ b/_includes/features.html
@@ -51,7 +51,7 @@
               </div>
             </div>
             <ul class="actions">
-              <li><a href="/strongly-typed.html" class="button button-icon icon icon-file">Tell Me More</a></li>
+              <li><a href="strongly-typed.html" class="button button-icon icon icon-file">Tell Me More</a></li>
             </ul>
           </section>
 
