--- a/_includes/head-wrapper.html
+++ b/_includes/head-wrapper.html
@@ -11,7 +11,7 @@
         <!-- Nav -->
         <nav id="nav">
           <ul>
-            <li><a class="icon icon-home" href="/index.html"><span>Introduction</span></a></li>
+            <li><a class="icon icon-home" href="{{ site.baseurl }}/index.html"><span>Introduction</span></a></li>
             <li>
               <a href="" class="icon icon-bar-chart"><span>Dropdown</span></a>
               <ul>
