--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,22 +8,22 @@
         <!-- <meta name="viewport" content="width=1040" /> -->
 
         <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
 
         <!-- Custom CSS -->
-        <!-- <link rel="stylesheet" href="/css/main.css"> -->
+        <!-- <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css"> -->
         <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Arvo:700" rel="stylesheet"  type="text/css" />
 
         <!-- Custom JS -->
         <!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-        <script src="/js/jquery.min.js"></script>
-        <script src="/js/jquery.dropotron.js"></script>
-        <script src="/js/config.js"></script>
-        <script src="/js/skel.min.js"></script>
-        <script src="/js/skel-panels.min.js"></script>
+        <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
+        <script src="{{ site.baseurl }}/js/jquery.dropotron.js"></script>
+        <script src="{{ site.baseurl }}/js/config.js"></script>
+        <script src="{{ site.baseurl }}/js/skel.min.js"></script>
+        <script src="{{ site.baseurl }}/js/skel-panels.min.js"></script>
         <noscript>
-          <link rel="stylesheet" href="/css/skel-noscript.css" />
-          <link rel="stylesheet" href="/css/style.css" />
-          <link rel="stylesheet" href="/css/style-desktop.css" />
+          <link rel="stylesheet" href="{{ site.baseurl }}/css/skel-noscript.css" />
+          <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
+          <link rel="stylesheet" href="{{ site.baseurl }}/css/style-desktop.css" />
         </noscript>
     </head>
