--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,9 +7,7 @@
 
                 {% for post in site.posts %}
 
-                  {% if (post.categories  contains 'frontpage') or (post.categories contains 'sidebar-highlight') %}
-
-                  {% else %}
+                  {% unless (post.categories  contains 'frontpage') or (post.categories contains 'sidebar-highlight') %}
 
                   <li>
 
@@ -25,7 +23,7 @@
 
                   </li>
 
-                  {% endif %}
+                  {% endunless %}
 
                 {% endfor %}
                 
@@ -52,7 +50,11 @@
                                 {{ post.content | split:'<!--more-->' | first }}
                               {% else %}
                                 <!-- Case for when no excerpt is defined -->
+                                {% comment %} Hmm... post.excerpt doesn't seem to run the exerpt through liquid first. Add a <!--more--> tag to force the content to be parsed.
+                                {% endcomment %}
+
                                 {{ post.excerpt }}
+
                               {% endif %}
 
                               <ul class="actions">
