--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,11 +19,11 @@
         <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
         <script src="{{ site.baseurl }}/js/jquery.dropotron.js"></script>
         <script src="{{ site.baseurl }}/js/config.js"></script>
-        <script src="{{ site.baseurl }}/js/skel.min.js"></script>
-        <script src="{{ site.baseurl }}/js/skel-panels.min.js"></script>
-        <noscript>
+        <!-- <script src="{{ site.baseurl }}/js/skel.min.js"></script>
+        <script src="{{ site.baseurl }}/js/skel-panels.min.js"></script> -->
+        <!-- <noscript> -->
           <link rel="stylesheet" href="{{ site.baseurl }}/css/skel-noscript.css" />
           <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
           <link rel="stylesheet" href="{{ site.baseurl }}/css/style-desktop.css" />
-        </noscript>
+        <!-- </noscript> -->
     </head>
