--- a/_includes/features.html
+++ b/_includes/features.html
@@ -11,7 +11,7 @@
 
                 <!-- Feature -->
                   <section>
-                    <a href="http://regularjane.deviantart.com/art/Old-Reads-363428235" class="image image-full"><img src="/images/pic01c.jpg" alt="" /><!-- <img src="http://placekitten.com/g/368/247" alt="" /> --></a>
+                    <a href="http://regularjane.deviantart.com/art/Old-Reads-363428235" class="image image-full"><img src="images/pic01c.jpg" alt="" /><!-- <img src="http://placekitten.com/g/368/247" alt="" /> --></a>
                     <header>
                       <h3>Okay, so what is this?</h3>
                     </header>
@@ -25,7 +25,7 @@
 
                 <!-- Feature -->
                   <section>
-                    <a href="http://regularjane.deviantart.com/art/Nutella-359114563" class="image image-full"><img src="/images/pic02c.jpg" alt="" /><!-- <img src="http://placedog.com/g/367/247" alt="" /> --></a>
+                    <a href="http://regularjane.deviantart.com/art/Nutella-359114563" class="image image-full"><img src="images/pic02c.jpg" alt="" /><!-- <img src="http://placedog.com/g/367/247" alt="" /> --></a>
                     <header>
                       <h3>Nice! What is HTML5 UP?</h3>
                     </header>
@@ -39,7 +39,7 @@
 
                 <!-- Feature -->
                   <section>
-                    <a href="http://regularjane.deviantart.com/art/Solo-Spring-358679786" class="image image-full"><img src="/images/pic03c.jpg" alt="" /><!-- <img src="http://lorempixel.com/367/247/cats" alt="" /> --></a>
+                    <a href="http://regularjane.deviantart.com/art/Solo-Spring-358679786" class="image image-full"><img src="images/pic03c.jpg" alt="" /><!-- <img src="http://lorempixel.com/367/247/cats" alt="" /> --></a>
                     <header>
                       <h3>skelJS? WTF is that?</h3>
                     </header>
