More prominent github link and attribution.

--- a/_includes/features.html
+++ b/_includes/features.html
@@ -15,8 +15,8 @@
                     <header>
                       <h3>Okay, so what is this?</h3>
                     </header>
-                    <p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template
-                    by <a href="http://html5up.net/">HTML5 UP</a>. Free for personal and commercial use under the
+                    <p>This is a port of <strong><a href="http://html5up.net/strongly-typed/">Strongly Typed</a></strong>, a free, fully responsive site template
+                    by <a href="http://html5up.net/">HTML5 UP</a> to run with <a href="http://jekyllrb.com">Jekyll</a>. Free for personal and commercial use under the
                     <a href="http://html5up.net/license/">CCA 3.0 license</a>.</p>
                   </section>
 
