--- a/_includes/head-wrapper.html
+++ b/_includes/head-wrapper.html
@@ -30,8 +30,9 @@
               </ul>
             </li>
 
-            <!-- <li><a class="icon icon-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
-            <li><a class="icon icon-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
+            <li><a class="icon icon-github" href="http://github.com/techieshark/strongly-typed-jekylled"><span>View it on GitHub</span></a></li>
+            <li><a class="icon icon-code-fork" href="http://html5up.net/"><span>HTML5 UP's original</span></a></li>
+            <!--
             <li><a class="icon icon-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
              -->
           </ul>
