Fixing links so they work on project pages
See 'Project Page URL Structure' section of
http://jekyllrb.com/docs/github-pages/.

That documentation stems from this comment
https://github.com/mojombo/jekyll/issues/332#issuecomment-18952908 on
Jekyll issue #332.

Basically, we set baseurl in _config.yml to the project name, and use
{{ site.baseurl }} throughout the site (with or without a trailing /,
depending on if we're followed by {{ page.url }} or '/css', '/js', etc
(detailed description in docs linked above).  When running locally, use
`jekyll serve --watch --baseurl '' `

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,11 +29,11 @@
                   <!-- Post -->
                     <article class="is-post">
                       <header>
-                        <h2><a href="{{ page.url }}">{{ page.title }}</a></h2>
+                        <h2><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h2>
                       </header>
                       {{ page.content }}
                       <ul class="actions">
-                        <li><a href="{{ page.url }}" class="button button-icon icon icon-file">Permalink</a></li>
+                        <li><a href="{{ site.baseurl }}{{ page.url }}" class="button button-icon icon icon-file">Permalink</a></li>
                       </ul>
                     </article>
 
