--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,7 +16,7 @@
                               <header>
                                   {% comment %} Date formatting info http://joshbranchaud.com/blog/2012/12/24/Date-Formatting-in-Jekyll.html {% endcomment %}
                                   <span class="date">{{ post.date | date: "%B %d, %Y"}} </span>
-                                  <h3><a href="{{post.url}}">{{ post.title }}</a></h3>
+                                  <h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
                               </header>
                               {{ post.excerpt }}
                           </article>
@@ -39,7 +39,7 @@
                       <!-- Highlight -->
                           <article class="is-highlight">
                               <header>
-                                  <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+                                  <h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
                               </header>
 
                               {% comment %}
@@ -58,7 +58,7 @@
                               {% endif %}
 
                               <ul class="actions">
-                                  <li><a href="{{ post.url }}" class="button button-icon icon icon-file">Learn More</a></li>
+                                  <li><a href="{{ site.baseurl }}{{ post.url }}" class="button button-icon icon icon-file">Learn More</a></li>
                               </ul>
                           </article>
                   </li>
