--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,1 +1,47 @@
-left-sidebar.html
+<!DOCTYPE html>
+<!--
+	Strongly Typed 1.0 by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	{% include head.html %}
+
+	<body class="left-sidebar">
+
+		{% include head-wrapper.html %}
+
+
+		<!-- Main Wrapper -->
+			<div id="main-wrapper">
+
+				<!-- Main -->
+					<div id="main" class="container">
+						<div class="row">
+
+							{% include sidebar.html %}
+
+							<!-- Content -->
+								<div id="content" class="8u skel-cell-mainContent">
+
+									<!-- Post -->
+										<article class="is-post">
+											<header>
+												<h2>{{ page.title }}</h2>
+											</header>
+											<!-- <span class="image image-full"><img src="http://placekitten.com/g/784/303" alt="" /></span> -->
+											<h3>{{ page.date | date_to_string }}</h3>
+											{{ content }}
+										</article>
+
+								</div>
+
+						</div>
+					</div>
+
+			</div>
+
+		{% include footer.html %}
+
+	</body>
+</html>
