fixed images for sidebar-highlights
Previously, we were including a page excerpt but it wasn't being
rendered and so images contained in it weren't having their source
attribute expanded.

We now implement essentially a 'featured image' which is included by the
sidebar template. Cleaner for content editors and actually works.

To use, define "image" in the YAML frontmatter like so:

---
layout: post
title:  "Something of note"
date:   2013-07-15 19:01:00
categories: sidebar-highlight
image: /images/pic06c.jpg
---

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -46,15 +46,19 @@
                               <!-- more--> tip via https://coderwall.com/p/eazb7w
                               {% endcomment %}
 
+                              {% if post contains 'image' %}
+
+                                <a class="image image-left" href="{{ site.baseurl }}{{ post.url }}">
+                                  <img alt="" src="{{ site.baseurl }} {{ post.image }}">
+                                </a>
+
+                              {% endif %}
+
                               {% if post.content contains '<!--more-->' %}
                                 {{ post.content | split:'<!--more-->' | first }}
                               {% else %}
                                 <!-- Case for when no excerpt is defined -->
-                                {% comment %} Hmm... post.excerpt doesn't seem to run the exerpt through liquid first. Add a <!--more--> tag to force the content to be parsed.
-                                {% endcomment %}
-
                                 {{ post.excerpt }}
-
                               {% endif %}
 
                               <ul class="actions">
